--- a/debug.ipynb
+++ b/debug.ipynb
@@ -83,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 285439.91it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 296712.91it/s]\n"
      ]
     }
    ],
@@ -225,25 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "targets, scores = train(train_loader, encoder, decoder, criterion, encoder_optimizer, decoder_optimizer, 1)"
+    "scores, targets = train(train_loader, encoder, decoder, criterion, encoder_optimizer, decoder_optimizer, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([16]), torch.Size([16, 5089]))"
+       "(torch.Size([8]), torch.Size([8, 5089]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,37 +254,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a',\n",
-       " 'man',\n",
-       " 'in',\n",
-       " 'a',\n",
-       " 'cap',\n",
-       " 'and',\n",
-       " 'shorts',\n",
-       " 'sits',\n",
-       " 'on',\n",
-       " 'a',\n",
-       " 'metal',\n",
-       " 'bench',\n",
-       " 'reading',\n",
-       " 'a',\n",
-       " 'newspaper',\n",
-       " '<eos>']"
+       "['two', 'women', 'smile', '<unk>', 'at', 'the', 'viewer', '<eos>']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[vocab.itos[i.item()] for i in targets]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['footbridge', 'toilet', 'pickup', 'hats', 'those', 'break', 'those', 'pickup']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[vocab.itos[i.item()] for i in scores.argmax(1)]"
    ]
   }
  ],
