pretrained embeddings code

--- a/Pre-trained Embeddings.ipynb
+++ b/Pre-trained Embeddings.ipynb
@@ -3,7 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ccab5bd",
+   "id": "de516c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cad81fc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d5f5b9b5",
+   "id": "43ec0611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +70,7 @@
     "    \n",
     "    pretrained_embeddings = t_params['pretrained_embeddings']\n",
     "    fine_tune_embeddings = t_params['fine_tune_embeddings']\n",
-    "    embeddings_matrix = t_params['embeddings_matrix']\n",
+    "    embeddings_matrix = m_params['embeddings_matrix']\n",
     "\n",
     "    # init / load checkpoint\n",
     "    if checkpoint is None:\n",
@@ -77,7 +89,7 @@
     "                                      vocab_size=len(vocab),\n",
     "                                      dropout=dropout)\n",
     "        if pretrained_embeddings:\n",
-    "            decoder.load_pretrained_embeddings(embeddings_matrix)\n",
+    "            decoder.load_pretrained_embeddings(torch.tensor(embeddings_matrix, dtype=torch.float32))\n",
     "            decoder.fine_tune_embeddings(fine_tune=fine_tune_embeddings)\n",
     "        \n",
     "        decoder_optimizer = torch.optim.RMSprop(params=filter(lambda p:p.requires_grad, decoder.parameters()),\n",
@@ -171,13 +183,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bfc53d5e",
+   "id": "11eec679",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
     "encoder_dim = 2048 # resnet101\n",
-    "emb_dim = 512  # dimension of word embeddings\n",
+    "emb_dim = 300  # dimension of word embeddings\n",
     "attention_dim = 512  # dimension of attention linear layers\n",
     "decoder_dim = 512  # dimension of decoder RNN\n",
     "dropout = 0.5\n",
@@ -185,8 +197,8 @@
     "cudnn.benchmark = True  # set to true only if inputs to model are fixed size; otherwise lot of computational overhead\n",
     "\n",
     "# training parameters\n",
-    "epochs = 7  # number of epochs to train for (if early stopping is not triggered)\n",
-    "batch_size = 256\n",
+    "epochs = 1  # number of epochs to train for (if early stopping is not triggered)\n",
+    "batch_size = 64\n",
     "workers = 2\n",
     "encoder_lr = 1e-4  # learning rate for encoder if fine-tuning\n",
     "decoder_lr = 4e-4  # learning rate for decoder\n",
@@ -199,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "47b1cf5c",
+   "id": "14a5221a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,14 +231,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "162d6b13",
+   "id": "f4862ec2",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 356660.02it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 388031.83it/s]\n"
      ]
     },
     {
@@ -247,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29458662",
+   "id": "31c070f0",
    "metadata": {},
    "source": [
     "### Pre-trained Embeddings"
@@ -255,16 +267,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e82290e8",
+   "execution_count": 7,
+   "id": "274b535d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "glove = pd.read_csv('glove.6B/glove.6B.300d.txt', sep=' ', quoting=3, header=None, index_col=0)\n",
+    "glove_embedding = {key: val.values for key, val in glove.T.items()}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4e1d9d6d",
+   "execution_count": 8,
+   "id": "6d38fb5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_embedding_matrix(vocab, embedding_dict, dimension):\n",
+    "    embedding_matrix = np.zeros((len(vocab), dimension))\n",
+    "    \n",
+    "    for word, index in vocab.stoi.items():\n",
+    "        if word in embedding_dict:\n",
+    "            embedding_matrix[index] = embedding_dict[word]\n",
+    "        else: \n",
+    "            embedding_matrix[index] = np.random.uniform(-.1, .1, size=dimension)\n",
+    "    return embedding_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c611c5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_matrix = create_embedding_matrix(vocab, glove_embedding, 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8d4d0656",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5089, 300)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4973b7a0",
    "metadata": {},
    "outputs": [
     {
@@ -273,9 +337,9 @@
        "{'data_name': 'flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab_fix_ds_rmsprop',\n",
        " 'imgs_path': 'flickr/Images/',\n",
        " 'df_path': 'data.json',\n",
-       " 'vocab': <dataset.Vocabulary at 0x7f581a6bd4d0>,\n",
-       " 'epochs': 7,\n",
-       " 'batch_size': 256,\n",
+       " 'vocab': <dataset.Vocabulary at 0x7f3d6dbd0350>,\n",
+       " 'epochs': 1,\n",
+       " 'batch_size': 64,\n",
        " 'workers': 2,\n",
        " 'decoder_lr': 0.0004,\n",
        " 'encoder_lr': 0.0001,\n",
@@ -284,7 +348,7 @@
        " 'fine_tune_embeddings': False}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,8 +374,8 @@
     "    'embed_dim': emb_dim,\n",
     "    'decoder_dim': decoder_dim,\n",
     "    'encoder_dim': encoder_dim,\n",
-    "    'dropout': dropout.\n",
-    "    'embedding_matrix': \n",
+    "    'dropout': dropout,\n",
+    "    'embeddings_matrix': embedding_matrix\n",
     "}\n",
     "\n",
     "t_params"
@@ -319,11 +383,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87543910",
+   "execution_count": 12,
+   "id": "e87048ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Data\n",
+      "Dataset split: train\n",
+      "Unique images: 6000\n",
+      "Total size: 30000\n",
+      "Dataset split: val\n",
+      "Unique images: 1000\n",
+      "Total size: 5000\n",
+      "__________________________________________________\n",
+      "-------------------- Fitting --------------------\n",
+      "__________________________________________________\n",
+      "-------------------- Training --------------------\n",
+      "Epoch: [0][0/469]\tBatch Time 6.728 (6.728)\tData Load Time 3.440 (3.440)\tLoss 9.4371 (9.4371)\tTop-5 Accuracy 0.000 (0.000)\n",
+      "Epoch: [0][100/469]\tBatch Time 1.121 (1.090)\tData Load Time 0.000 (0.034)\tLoss 5.1338 (5.7062)\tTop-5 Accuracy 49.603 (43.075)\n",
+      "Epoch: [0][200/469]\tBatch Time 1.105 (1.083)\tData Load Time 0.000 (0.017)\tLoss 5.0455 (5.3644)\tTop-5 Accuracy 50.611 (47.638)\n",
+      "Epoch: [0][300/469]\tBatch Time 1.086 (1.072)\tData Load Time 0.000 (0.012)\tLoss 4.6390 (5.1817)\tTop-5 Accuracy 56.369 (50.053)\n",
+      "Epoch: [0][400/469]\tBatch Time 1.001 (1.064)\tData Load Time 0.000 (0.009)\tLoss 4.8202 (5.0634)\tTop-5 Accuracy 56.081 (51.656)\n",
+      "-------------------- Validation --------------------\n",
+      "Validation: [0/79]\tBatch Time 2.916 (2.916)\tLoss 5.5565 (5.5565)\tTop-5 Accuracy 50.958 (50.958)\t\n",
+      "----- Bleu-n Scores -----\n",
+      "1: 63.52849726683869\n",
+      "2: 38.93060987384824\n",
+      "3: 22.463913491080632\n",
+      "4: 12.840941076866258\n",
+      "-------------------------\n",
+      "\n",
+      " * LOSS - 5.247, TOP-5 ACCURACY - 54.947, BLEU-4 - 0.12980155038238195\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit(t_params=t_params, m_params=m_params)"
+   ]
   }
  ],
  "metadata": {
