--- a/Pre-trained Embeddings.ipynb
+++ b/Pre-trained Embeddings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "de516c59",
+   "id": "cbe9c911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cad81fc5",
+   "execution_count": 14,
+   "id": "ed5016d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "from nltk.translate.bleu_score import corpus_bleu\n",
     "\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "from train import train, validate\n",
     "\n",
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "43ec0611",
+   "id": "40523575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11eec679",
+   "id": "37fbd380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "14a5221a",
+   "id": "bbc81a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4862ec2",
+   "id": "bba43176",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c070f0",
+   "id": "8ebcc860",
    "metadata": {},
    "source": [
     "### Pre-trained Embeddings"
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "274b535d",
+   "id": "9c3e1839",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6d38fb5f",
+   "id": "334fd1df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c611c5dc",
+   "id": "44fed40e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +308,10 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8d4d0656",
-   "metadata": {},
+   "id": "2ae4596b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -327,8 +330,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "3a3b0561",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('embeddings.pkl','wb') as f: pickle.dump(embedding_matrix, f)\n",
+    "\n",
+    "with open('embeddings.pkl','rb') as f: embedding_matrix1 = pickle.load(f)\n",
+    "\n",
+    "np.array_equal(embedding_matrix,embedding_matrix1) #sanity check"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
-   "id": "4973b7a0",
+   "id": "8de24a52",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e87048ce",
+   "id": "3258e58a",
    "metadata": {},
    "outputs": [
     {
