--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
     "from utils import load_checkpoint\n",
     "from dataset import build_vocab, get_loaders\n",
     "from tqdm import tqdm\n",
-    "from nltk.translate.bleu_score import corpus_bleu"
+    "from nltk.translate.bleu_score import corpus_bleu\n",
+    "from utils import print_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_NAME = 'flickr8k_5_cap_per_img_2_min_word_freq_resnet101finetuneencoder'\n",
     "\n",
     "# local\n",
     "DATA_JSON_PATH = 'data.json'\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 383978.61it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 376933.08it/s]\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
        "5089"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,15 +159,6 @@
     "import argparse\n",
     "from PIL import Image\n",
     "def caption_image_beam_search(encoder, decoder, image_path, word_map, beam_size=3):\n",
-    "    \"\"\"\n",
-    "    Reads an image and captions it with beam search.\n",
-    "    :param encoder: encoder model\n",
-    "    :param decoder: decoder model\n",
-    "    :param image_path: path to image\n",
-    "    :param word_map: word map\n",
-    "    :param beam_size: number of sequences to consider at each decode-step\n",
-    "    :return: caption, weights for visualization\n",
-    "    \"\"\"\n",
     "\n",
     "    k = beam_size\n",
     "    vocab_size = len(word_map)\n",
@@ -370,30 +361,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(beam_size):\n",
-    "    \"\"\"\n",
-    "    Evaluation\n",
-    "    :param beam_size: beam size at which to generate captions for evaluation\n",
-    "    :return: BLEU-4 score\n",
-    "    \"\"\"\n",
     "\n",
-    "    # TODO: Batched Beam Search\n",
-    "    # Therefore, do not use a batch_size greater than 1 - IMPORTANT!\n",
-    "\n",
-    "    # Lists to store references (true captions), and hypothesis (prediction) for each image\n",
-    "    # If for n images, we have n hypotheses, and references a, b, c... for each image, we need -\n",
-    "    # references = [[ref1a, ref1b, ref1c], [ref2a, ref2b], ...], hypotheses = [hyp1, hyp2, ...]\n",
     "    references = list()\n",
     "    hypotheses = list()\n",
     "\n",
     "    # For each image\n",
     "    for i, (image, caps, caplens, allcaps) in enumerate(\n",
-    "            tqdm(loader, desc=\"EVALUATING AT BEAM SIZE \" + str(beam_size))):\n",
-    "\n",
+    "        tqdm(loader, desc=\"EVALUATING AT BEAM SIZE \" + str(beam_size))):\n",
+    "        \n",
     "        k = beam_size\n",
     "\n",
     "        # Move to GPU device, if available\n",
@@ -452,13 +432,10 @@
     "            else:\n",
     "                # Unroll and find top scores, and their unrolled indices\n",
     "                top_k_scores, top_k_words = scores.view(-1).topk(k, 0)  # (s)\n",
-    "\n",
-    "a                \n",
+    "          \n",
     "            # Convert unrolled indices to actual indices of scores\n",
     "            prev_word_inds = top_k_words // vocab_size  # (s)\n",
     "            next_word_inds = top_k_words % vocab_size  # (s)\n",
-    "            if prev_word_inds.item() != 0:\n",
-    "                print(prev_word_inds)\n",
     "            \n",
     "#             print(top_k_scores, top_k_words)\n",
     "            # Add new words to sequences\n",
@@ -506,34 +483,33 @@
     "        assert len(references) == len(hypotheses)\n",
     "\n",
     "    # Calculate BLEU-4 scores\n",
-    "    bleu4 = corpus_bleu(references, hypotheses)\n",
-    "\n",
-    "    return bleu4\n",
-    "\n"
+    "#     bleu4 = corpus_bleu(references, hypotheses)\n",
+    "#     return references, hypotheses\n",
+    "    print_scores(references, hypotheses, nltk=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1:   4%|▍         | 223/5000 [00:07<02:41, 29.49it/s]\n"
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:39<00:00, 31.40it/s]\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-335ac93687e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-16-d335e3373502>\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(beam_size)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;31m#             print(top_k_scores, top_k_words)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m             \u001b[0;31m# Add new words to sequences\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m             \u001b[0mseqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseqs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_word_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_word_inds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# (s, step+1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m             \u001b[0;31m# Which sequences are incomplete (didn't reach <end>)?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 61.525192918747166\n",
+      "2: 43.66082151386785\n",
+      "3: 30.667361192063407\n",
+      "4: 20.798872886259115\n",
+      "-------------------------\n"
      ]
     }
    ],
@@ -544,268 +520,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 73,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:42<00:00, 30.81it/s]\n"
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:12<00:00, 25.98it/s]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.20798872886259115"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vocab.stoi\n",
-    "evaluate(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:09<00:00, 26.34it/s]\n"
+      "----- Bleu-n Scores -----\n",
+      "1: 63.507063764795724\n",
+      "2: 45.79322947979045\n",
+      "3: 32.94907246692714\n",
+      "4: 22.867002491504053\n",
+      "-------------------------\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.22867002491504052"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "evaluate(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Evaluating at Beam size 2:   0%|          | 0/5000 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-53a6cfbcfec3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mstep\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomplete_seqs_scores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomplete_seqs_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m     \u001b[0mseq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomplete_seqs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
-     ]
-    }
-   ],
-   "source": [
-    "references = list()\n",
-    "hypotheses = list()\n",
-    "\n",
-    "for i, (image, caps, caplens, allcaps) in enumerate(\n",
-    "        tqdm(test_loader, desc=f'Evaluating at Beam size {beam_size}')):\n",
-    "    \n",
-    "    k = beam_size\n",
-    "    \n",
-    "    image = image.to(device)\n",
-    "    \n",
-    "    # encoder\n",
-    "    encoder_out = encoder(image) # [1, enc_img_size, enc_img_size, encoder_dim]\n",
-    "    enc_img_size = encoder_out.size(1)\n",
-    "    encoder_dim = encoder_out.size(3)\n",
-    "    \n",
-    "    # flatten encoding\n",
-    "    encoder_out = encoder_out.view(1, -1, encoder_dim) # [1, num_pixels, encoder_dim]\n",
-    "    num_pixels = encoder_out.size(1)\n",
-    "    \n",
-    "    # treat it as we have a batch of size k\n",
-    "    encoder_out = encoder_out.expand(k, num_pixels, encoder_dim) # [k, num_pixels, encoder_dim]\n",
-    "    \n",
-    "    # tensor to store top k previous words at each step; currently it's only <sos>\n",
-    "    k_prev_words = torch.LongTensor([[vocab.stoi['<sos>']]]*k).to(device) # [k, 1]\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # tensor to store top k sequences\n",
-    "    seqs = k_prev_words\n",
-    "    \n",
-    "    # tensor to store top k sequences' scores\n",
-    "    top_k_scores = torch.zeros(k, 1).to(device)\n",
-    "    \n",
-    "    # lists to store completed sequences and scores\n",
-    "    complete_seqs = list()\n",
-    "    complete_seqs_scores = list()\n",
-    "    \n",
-    "    # decoding\n",
-    "    step = 1\n",
-    "    h, c = decoder.init_hidden_state(encoder_out)\n",
-    "    \n",
-    "    while True:\n",
-    "        embeddings = decoder.embedding(k_prev_words).squeeze(1) # [s, embed_dim]\n",
-    "        \n",
-    "        awe, _ = decoder.attention(encoder_out, h) # [s, encoder_dim], [s, num_pixels]\n",
-    "        \n",
-    "        gate = decoder.sigmoid(decoder.f_beta(h))\n",
-    "        awe = gate * awe\n",
-    "        \n",
-    "        h, c = decoder.decode_step(torch.cat([embeddings, awe], dim=1), (h, c))\n",
-    "        \n",
-    "        scores = decoder.fc(h) # [s, vocab size]\n",
-    "        scores = F.log_softmax(scores, dim=1)\n",
-    "        break\n",
-    "        # add \n",
-    "        scores = top_k_scores.expand_as(scores) + scores # [s, vocab_size]\n",
-    "                \n",
-    "        # for the first step: all k points will have the same score; since same k previous words, h,c\n",
-    "        if step == 1:\n",
-    "            top_k_scores, top_k_words = scores[0].topk(k, 0, True, True)  # [s]\n",
-    "        else:\n",
-    "            # Unroll and find top scores, and their unrolled indices\n",
-    "            top_k_scores, top_k_words = scores.view(-1).topk(k, 0, True, True)  # [s]\n",
-    "            \n",
-    "        # convert unrolled indices to actual indices of scores\n",
-    "        prev_word_inds = top_k_words / len(vocab)\n",
-    "        next_word_inds = top_k_words % len(vocab)\n",
-    "        \n",
-    "        print(top_k_words)\n",
-    "        print(prev_word_inds)\n",
-    "        print(next_word_inds)\n",
-    "        \n",
-    "        # add new words to sequences\n",
-    "        seqs = torch.cat([seqs[prev_word_inds], next_word_inds.unsqueeze(1)], dim=1)\n",
-    "        \n",
-    "        # which sequences are incomplete - didn't reach <end>\n",
-    "        incomplete_inds = [ind for ind, next_word in enumerate(next_word_inds) if next_word != vocab['<eos>']]\n",
-    "        \n",
-    "        complete_inds = list(set(range(len(next_word_inds))) - set(incomplete_inds))\n",
-    "        \n",
-    "        # set aside complete sequences\n",
-    "        if len(complete_inds) > 0:\n",
-    "            complete_seqs.extend(seqs[complete_inds].tolist())\n",
-    "            complete_seqs_scores.extend(top_k_scores[complete_inds])\n",
-    "        k -= len(complete_inds) # reduce beam length accordingly\n",
-    "        \n",
-    "        # proceed with incomplete sequences\n",
-    "        if k == 0:\n",
-    "            break\n",
-    "        \n",
-    "        seqs = seqs[incomplete_inds]\n",
-    "        h = h[prev_word_inds[incomplete_inds]]\n",
-    "        c = c[prev_word_inds[incomplete_inds]]\n",
-    "        encoder_out = encoder_out[prev_word_inds[incomplete_inds]]\n",
-    "        top_k_scores = top_k_scores[incomplete_inds].unsqueeze(1)\n",
-    "        k_prev_words = next_word_inds[incomplete_inds].unsqueeze(1)\n",
-    "        \n",
-    "        # break if things have been going on too long\n",
-    "        if step > 50:\n",
-    "            break\n",
-    "        step += 1\n",
-    "        \n",
-    "    i = complete_seqs_scores.index(max(complete_seqs_scores))\n",
-    "    seq = complete_seqs[1]\n",
-    "    \n",
-    "    # references \n",
-    "    for j in range(allcaps.shape[0]):\n",
-    "            img_caps = allcaps[j].tolist()\n",
-    "            references.append(vocab.indextostring(img_caps))\n",
-    "\n",
-    "    # hypotheses\n",
-    "    hypotheses.append([w for w in seq if w not in {vocab.stoi['<sos>'], vocab.stoi['<eos>'], vocab.stoi['<pad>']}])\n",
-    "    \n",
-    "    assert len(references) == len(hypotheses)\n",
-    "    \n",
-    "bleu4 = corpus_bleu(references, hypotheses)\n",
-    "\n",
-    "print(bleu4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w, ww = scores.view(-1).topk(k, 0, True, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([-0.1701, -0.1701], device='cuda:0', grad_fn=<TopkBackward>),\n",
-       " tensor([5093,    4], device='cuda:0'))"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w, ww"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
